--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   </head>
   <body>
     <h1>The New Mobile Web: ServiceWorker, Push, and App Manifests</h1>
-    <p>Presented by <a href="https://twitter.com/callahad">@callahad</a> at <a href="https://joind.in/talk/70986">OpenWest 2016</a>, July 2016.</p>
+    <p>Presented by <a href="https://twitter.com/callahad">@callahad</a> at <a href="http://midwestjs.com">Midwest JS 2016</a>, August 12th, 2016.</p>
     <p><a href="./slides">View the slides</a> (GitHub Pages)</p>
-    <p><a href="https://github.com/callahad/ow16-newweb">View the code</a> (GitHub)</p>
+    <p><a href="https://github.com/callahad/mjs16-newweb">View the code</a> (GitHub)</p>
     <p>Links:</p>
     <ul>
       <li><a href="https://serviceworke.rs">Service Worker Cookbook</a></li>
